Removing extra solution

--- a/src/Bie.Api/Bie.Api.csproj
+++ b/src/Bie.Api/Bie.Api.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>false</InvariantGlobalization>
     <UserSecretsId>49039f25-303f-4f87-90a4-1c1449d5f0d5</UserSecretsId>
