Fixing loging and access

--- a/.gitignore
+++ b/.gitignore
@@ -484,6 +484,7 @@ $RECYCLE.BIN/
 *.swp
 
 *.dll
-src/Bie.Api/bin/Debug/net8.0/Bie.Api.dll
 src/Bie.Api/bin/Debug/net8.0/Bie.Api.pdb
 src/Bie.Data/obj/Debug/net8.0/Bie.Data.AssemblyInfo.cs
+src/Bie.Api/bin/Debug/net8.0/Bie.Api.dll
+src/Bie.Business/obj/Debug/net8.0/Bie.Business.dll
