--- a/src/Bie.Api/appsettings.Development.json
+++ b/src/Bie.Api/appsettings.Development.json
@@ -1,8 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=Database;User Id=User;Password=;TrustServerCertificate=True",
+        "APPLICATIONINSIGHTS_CONNECTION_STRING": ""
+      },
+    "Jwt": {
+        "Key": "4f2O3mJVnBlqKo7fLy3ZTRz6IHHGmBgcVHz3",
+        "Issuer": "localhost:5001",
+        "Audience": "localhost:5001",
+        "ExpiresInMinutes": 10
+    },
+    "AzureCfg":{
+        "StorageCfg": "",
+        "Container": ""
     }
-  }
 }
