--- a/src/Bie.Api/appsettings.json
+++ b/src/Bie.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Database=Database;User Id=User;Password=;TrustServerCertificate=True",
-        "APPLICATIONINSIGHTS_CONNECTION_STRING": ""
+        "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=agende_db;",
+        "APPLICATIONINSIGHTS_CONNECTION_STRING": "APPLICATIONINSIGHTS_CONNECTION_STRING"
       },
     "Jwt": {
         "Key": "4f2O3mJVnBlqKo7fLy3ZTRz6IHHGmBgcVHz3",
